drop-all-cap/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drop-all-cap-deployment
  namespace: demo
  labels:
    app: nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
          securityContext:
            capabilities:
              drop:
                - ALL
