drop-all-cap/drop-all-cap-policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "drop-all-cap-policy-binding"
spec:
  policyName: "drop-all-cap-policy"
  validationActions: [Deny]
